--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.0",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
@@ -81,16 +81,17 @@
     "@remark-embedder/core": "^3.0.1",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@tanstack/react-query": "^4.29.5",
-    "@trpc/client": "^10.25.0",
-    "@trpc/next": "^10.25.0",
-    "@trpc/react-query": "^10.25.0",
-    "@trpc/server": "^10.25.0",
+    "@trpc/client": "^10.25.1",
+    "@trpc/next": "^10.25.1",
+    "@trpc/react-query": "^10.25.1",
+    "@trpc/server": "^10.25.1",
+    "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "contentlayer": "^0.3.2",
     "i18next": "^22.4.15",
-    "lucide-react": "^0.211.0",
+    "lucide-react": "^0.215.0",
     "next": "^13.4.1",
     "next-auth": "^4.22.1",
     "next-contentlayer": "^0.3.2",
@@ -115,11 +116,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^20.1.0",
-    "@types/react": "^18.2.5",
+    "@types/node": "^20.1.2",
+    "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "adr-tool": "^0.3.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
@@ -132,7 +133,7 @@
     "jest-node-exports-resolver": "^1.1.6",
     "postcss": "^8.4.23",
     "postcss-nesting": "^11.2.2",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
