--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "typecheck": "tsc --noEmit",
     "format:write": "deno fmt",
     "format:check": "deno fmt --check",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@happykit/flags": "^3.2.0",
@@ -112,16 +112,14 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@jest/expect": "^29.5.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-react": "^4.0.0",
     "adr-tool": "^0.3.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
@@ -129,14 +127,13 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unicorn": "^47.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-node-exports-resolver": "^1.1.6",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "postcss-nesting": "^11.2.2",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.4"
   }
 }
