--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -12,43 +12,42 @@ jobs:
     permissions:
       contents: read
       deployments: write
-    name: Deploy to Cloudflare Pages
+    name: Deployment Checks
     steps:
-      - name: Configuration for production
-        if: ${{ github.ref_name == 'master' }}
-        run: |
-          echo "CFPAGES_BRANCH=main" >> $GITHUB_ENV
-      - name: Configuration for non-production
-        if: ${{ github.ref_name != 'master' }}
-        run: |
-          echo "CFPAGES_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: latest
-          cache: yarn
-      - name: Setup Yarn
-        uses: mskelton/setup-yarn@v1.2.1
-      - name: Install NPM Dependencies
-        run: yarn install --frozen-lockfile
-      - name: Generate Static Export with Next.js
-        run: yarn export
-        env:
-          NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
-          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
-          NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
-          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
-          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
-          NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
-          NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@1
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2
+        id: pnpm-install
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: 10fwd-website
-          branch: ${{ env.CFPAGES_BRANCH }}
-          directory: out
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          version: 7
+          run_install: false
+
+      - name: Get PNPM store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - uses: actions/cache@v3
+        name: Setup PNPM cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install NPM dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Check Linter
+        run: pnpm lint
+
+      - name: Run Tests
+        run: pnpm test
