--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "eslint-config-next": "^13.4.4",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-turbo": "^1.10.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
