--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "typecheck": "tsc --noEmit",
     "format:write": "deno fmt",
     "format:check": "deno fmt --check",
-    "test": "vitest",
-    "test:watch": "vitest --watch"
+    "test:run": "vitest run",
+    "test": "vitest watch",
+    "ci-lint": "turbo run lint",
+    "ci-test": "turbo run test:run"
   },
   "dependencies": {
     "@happykit/flags": "^3.2.0",
@@ -136,6 +138,7 @@
     "postcss-nesting": "^11.2.2",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
+    "turbo": "^1.10.1",
     "typescript": "^5.1.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.31.4"
