--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@happykit/flags": "^3.2.0",
+    "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
@@ -87,23 +88,26 @@
     "@remark-embedder/core": "^3.0.1",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@tanstack/react-query": "^4.29.12",
-    "@trpc/client": "^10.29.0",
-    "@trpc/next": "^10.29.0",
-    "@trpc/react-query": "^10.29.0",
-    "@trpc/server": "^10.29.0",
+    "@trpc/client": "^10.30.0",
+    "@trpc/next": "^10.30.0",
+    "@trpc/react-query": "^10.30.0",
+    "@trpc/server": "^10.30.0",
     "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "contentlayer": "^0.3.3",
-    "i18next": "^22.5.0",
-    "lucide-react": "^0.233.0",
-    "next": "^13.4.4",
+    "esbuild": "^0.18.0",
+    "i18next": "^22.5.1",
+    "lucide-react": "^0.242.0",
+    "mdx-bundler": "^9.2.1",
+    "next": "^13.4.5",
     "next-auth": "^4.22.1",
     "next-contentlayer": "^0.3.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
@@ -112,35 +116,35 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "sharp": "^0.32.1",
-    "tailwind-merge": "^1.13.0",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwind-merge": "^1.13.1",
+    "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.8",
+    "@types/node": "^20.3.0",
+    "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-react": "^4.0.0",
     "adr-tool": "^0.3.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint-config-next": "^13.4.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.1",
-    "eslint-plugin-turbo": "^1.10.1",
+    "eslint-plugin-turbo": "^1.10.3",
     "eslint-plugin-unicorn": "^47.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "postcss-nesting": "^11.2.2",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
-    "turbo": "^1.10.1",
+    "turbo": "^1.10.3",
     "typescript": "^5.1.3",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.31.4"
+    "vitest": "^0.32.0"
   }
 }
