removed content-layer.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ],
-      "@contentlayer/generated": ["./.contentlayer/generated"]
+      ]
     },
     "plugins": [
       {
@@ -40,8 +39,7 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
-    ".next/types/**/*.ts",
-    ".contentlayer/generated"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules/",
