--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "dependencies": {
     "@happykit/flags": "^3.2.0",
-    "@hookform/resolvers": "^3.1.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@mdx-js/mdx": "^2.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
@@ -96,14 +97,10 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
-    "contentlayer": "^0.3.3",
-    "esbuild": "^0.18.0",
     "i18next": "^22.5.1",
-    "lucide-react": "^0.242.0",
-    "mdx-bundler": "^9.2.1",
+    "lucide-react": "^0.244.0",
     "next": "^13.4.5",
     "next-auth": "^4.22.1",
-    "next-contentlayer": "^0.3.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -123,11 +120,12 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.3.0",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@types/mdx": "^2.0.5",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "@vitejs/plugin-react": "^4.0.0",
     "adr-tool": "^0.3.0",
     "autoprefixer": "^10.4.14",
