--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   "dependencies": {
     "@happykit/flags": "^3.2.0",
     "@hookform/resolvers": "^3.1.1",
-    "@mdx-js/mdx": "^2.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
@@ -101,6 +100,7 @@
     "lucide-react": "^0.244.0",
     "next": "^13.4.5",
     "next-auth": "^4.22.1",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
