--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,8 +1,14 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
-    "postinstall": "prisma generate",
+    "postinstall": "pnpm run db:generate",
+    "db:generate": "prisma generate --data-proxy",
+    "db:push": "prisma db push",
+    "db:seed": "prisma db seed",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ && pnpm install",
     "dev": "tsx watch src/index.ts",
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --external:express --external:cors",
@@ -12,15 +18,15 @@
     "format:check": "deno fmt --check"
   },
   "dependencies": {
-    "@prisma/client": "4.15.0",
+    "@prisma/client": "4.16.1",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "esbuild": "^0.18.2",
-    "prisma": "^4.15.0",
+    "esbuild": "^0.18.7",
+    "prisma": "^4.16.1",
     "tsx": "^3.12.7",
     "types": "workspace:^",
     "typescript": "^5.1.3"
