--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -47,6 +47,8 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@remark-embedder/core": "^3.0.1",
     "@remark-embedder/transformer-oembed": "^3.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.7.2",
+    "@supabase/supabase-js": "^2.26.0",
     "@tanstack/react-query": "^4.29.12",
     "@trpc/client": "^10.30.0",
     "@trpc/next": "^10.30.0",
