supabase clients (take II).

--- a/packages/web/.env
+++ b/packages/web/.env
@@ -6,5 +6,6 @@
 # should be updated accordingly.
 
 # SUPABASE
+NEXT_PUBLIC_SUPABASE_PROJECT_REF=alejxsvqroubkwwyfwdn
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
