--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "1.0.0",
   "scripts": {
+    "generate": "tsx ./src/tools/generate.ts",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ .next/ && pnpm install",
     "dev": "next dev",
     "build": "next build",
@@ -98,7 +99,9 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "postcss-nesting": "^11.2.2",
+    "supabase": "^1.68.6",
     "tailwindcss": "^3.3.2",
+    "tsx": "^3.12.7",
     "types": "workspace:^",
     "typescript": "^5.1.3",
     "vite-tsconfig-paths": "^4.2.0",
