--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,6 +10,9 @@
     "db:generate": "prisma generate --data-proxy",
     "db:push": "prisma db push --skip-generate",
     "db:seed": "prisma db seed",
+    "db:local:generate": "dotenv -e .env.local -- prisma generate",
+    "db:local:push": "dotenv -e .env.local -- prisma db push --skip-generate",
+    "db:local:seed": "dotenv -e .env.local -- prisma db seed",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ && pnpm install",
     "dev": "supabase start && supabase functions serve",
     "deploy": "supabase functions deploy",
@@ -28,6 +31,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.3.1",
+    "dotenv-cli": "^7.2.1",
     "esbuild": "^0.18.8",
     "prisma": "^4.16.1",
     "tsx": "^3.12.7",
