--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,7 +18,7 @@
     "test": "vitest watch"
   },
   "dependencies": {
-    "@happykit/flags": "^3.2.0",
+    "@happykit/flags": "^3.3.0",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -52,61 +52,62 @@
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
-    "@tanstack/react-query": "^4.29.12",
-    "@trpc/client": "^10.30.0",
-    "@trpc/next": "^10.30.0",
-    "@trpc/react-query": "^10.30.0",
-    "@trpc/server": "^10.30.0",
+    "@tanstack/react-query": "^4.29.17",
+    "@trpc/client": "^10.32.0",
+    "@trpc/next": "^10.32.0",
+    "@trpc/react-query": "^10.32.0",
+    "@trpc/server": "^10.32.0",
     "@vercel/analytics": "^1.0.1",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
-    "i18next": "^22.5.1",
-    "lucide-react": "^0.244.0",
-    "next": "^13.4.5",
+    "i18next": "^23.2.3",
+    "lucide-react": "^0.252.0",
+    "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.45.0",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.2.0",
-    "rehype-prism-plus": "^1.5.1",
+    "rehype-prism-plus": "^1.6.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "sharp": "^0.32.1",
-    "tailwind-merge": "^1.13.1",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@next/env": "^13.4.7",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "^14.0.0",
     "@types/mdx": "^2.0.5",
     "@types/node": "^20.3.1",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.5",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
-    "postcss-nesting": "^11.2.2",
+    "postcss-nesting": "^11.3.0",
     "supabase": "^1.68.6",
     "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
     "types": "workspace:^",
     "typescript": "^5.1.3",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.2"
   }
 }
