--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -52,7 +52,7 @@
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
-    "@tanstack/react-query": "^4.29.17",
+    "@tanstack/react-query": "^4.29.19",
     "@trpc/client": "^10.32.0",
     "@trpc/next": "^10.32.0",
     "@trpc/react-query": "^10.32.0",
@@ -77,6 +77,7 @@
     "rehype-prism-plus": "^1.6.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
@@ -90,19 +91,19 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "postcss-nesting": "^11.3.0",
-    "supabase": "^1.68.6",
+    "supabase": "^1.74.2",
     "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
     "types": "workspace:^",
