--- a/packages/api/supabase/config.toml
+++ b/packages/api/supabase/config.toml
@@ -81,5 +81,5 @@ gcp_project_id = ""
 gcp_project_number = ""
 gcp_jwt_path = "supabase/gcloud.json"
 
-[functions.users-list]
-verify_jwt = false
+# [functions.init]
+# verify_jwt = false
