--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -5,6 +5,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "allowImportingTsExtensions": true,
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
