--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -77,6 +77,7 @@
     "rehype-prism-plus": "^1.6.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.63.6",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.2",
