--- a/packages/web/components.json
+++ b/packages/web/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/app/[lang]/globals.css",
+    "css": "src/app/globals.css",
     "baseColor": "slate",
     "cssVariables": true
   },
