--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,11 +2,12 @@
   "name": "types",
   "version": "1.0.0",
   "scripts": {
+    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ && pnpm install",
     "typecheck": "tsc --noEmit",
     "format:write": "deno fmt",
     "format:check": "deno fmt --check"
   },
   "devDependencies": {
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   }
 }
