--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
     "test": "vitest watch"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@happykit/flags": "^3.3.0",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accessible-icon": "^1.0.3",
@@ -60,8 +61,8 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "i18next": "^23.2.3",
-    "lucide-react": "^0.252.0",
+    "lucide-react": "^0.257.0",
+    "negotiator": "^0.6.3",
     "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "next-mdx-remote": "^4.4.1",
@@ -69,7 +70,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.0",
+    "react-hook-form": "^7.45.1",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
@@ -89,6 +90,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "^14.0.0",
     "@types/mdx": "^2.0.5",
+    "@types/negotiator": "^0.6.1",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -104,11 +106,11 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "postcss-nesting": "^11.3.0",
-    "supabase": "^1.74.2",
+    "supabase": "^1.75.2",
     "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
     "types": "workspace:^",
-    "typescript": "^5.1.3",
+    "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.2"
   }
