--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,7 +23,7 @@
     "test": "deno test --watch"
   },
   "dependencies": {
-    "@prisma/client": "4.16.2",
+    "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "zod": "^3.21.4"
@@ -32,12 +32,12 @@
     "@edge-runtime/vm": "^3.0.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.3",
+    "@types/node": "^20.4.2",
     "dotenv-cli": "^7.2.1",
-    "esbuild": "^0.18.11",
-    "prisma": "^4.16.2",
+    "esbuild": "^0.18.13",
+    "prisma": "^5.0.0",
     "tsx": "^3.12.7",
-    "types": "workspace:^",
+    "shared": "workspace:^",
     "typescript": "^5.1.6"
   }
 }
