--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -51,19 +51,20 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@remark-embedder/core": "^3.0.1",
+    "@remark-embedder/core": "^3.0.2",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
-    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query": "^4.29.23",
     "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.258.0",
+    "lucide-react": "^0.260.0",
+    "modern-normalize": "^2.0.0",
     "negotiator": "^0.6.3",
-    "next": "^13.4.7",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
@@ -80,38 +81,38 @@
     "remark-gfm": "^3.0.1",
     "sass": "^1.63.6",
     "server-only": "^0.0.1",
-    "sharp": "^0.32.1",
+    "sharp": "^0.32.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@next/env": "^13.4.7",
+    "@next/env": "^13.4.10",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "^14.0.0",
     "@types/mdx": "^2.0.5",
     "@types/negotiator": "^0.6.1",
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.7",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^13.4.10",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-unicorn": "^48.0.0",
     "jsdom": "^22.1.0",
-    "postcss": "^8.4.24",
-    "postcss-nesting": "^11.3.0",
-    "supabase": "^1.75.3",
-    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.26",
+    "postcss-nesting": "^12.0.0",
+    "supabase": "^1.77.9",
+    "tailwindcss": "^3.3.3",
     "tsx": "^3.12.7",
-    "types": "workspace:^",
+    "shared": "workspace:^",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.2"
+    "vitest": "^0.33.0"
   }
 }
