--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,9 @@
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
       // "dependsOn": ["typecheck"]
     },
+    "cleanup": {
+      "outputs": []
+    },
     "typecheck": {
       "outputs": []
     },
