--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,7 @@
     "generate": "pnpm run tool:generate",
     "tool:generate": "tsx ./src/tools/generate.ts",
     "tool:check-env": "tsx ./src/tools/check-env.ts",
-    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ .next/ && pnpm install",
+    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ .next/",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -59,7 +59,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.260.0",
+    "lucide-react": "^0.261.0",
     "modern-normalize": "^2.0.0",
     "negotiator": "^0.6.3",
     "next": "^13.4.10",
@@ -90,8 +90,8 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
