--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,12 +6,9 @@
   },
   "scripts": {
     "generate": "pnpm run db:generate",
-    "db:generate": "prisma generate --data-proxy",
-    "db:push": "prisma db push --skip-generate",
-    "db:seed": "prisma db seed",
-    "db:local:generate": "dotenv -e .env.local -- prisma generate",
-    "db:local:push": "dotenv -e .env.local -- prisma db push --skip-generate",
-    "db:local:seed": "dotenv -e .env.local -- prisma db seed",
+    "db:generate": "dotenv -e .env.local -- prisma generate --data-proxy",
+    "db:push": "dotenv -e .env.local -- prisma db push --skip-generate",
+    "db:seed": "dotenv -e .env.local -- prisma db seed",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/",
     "dev": "supabase start && supabase functions serve",
     "deploy": "supabase functions deploy",
