--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,7 @@
     "generate": "pnpm run tool:generate",
     "tool:generate": "tsx ./src/tools/generate.ts",
     "tool:check-env": "tsx ./src/tools/check-env.ts",
-    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/ .next/",
+    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json deno.lock node_modules/ .next/",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -54,7 +54,7 @@
     "@remark-embedder/core": "^3.0.2",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
-    "@supabase/supabase-js": "^2.26.0",
+    "@supabase/supabase-js": "^2.29.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
