--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,7 @@
     "db:generate": "dotenv -e .env.local -- prisma generate --data-proxy",
     "db:push": "dotenv -e .env.local -- prisma db push --skip-generate",
     "db:seed": "dotenv -e .env.local -- prisma db seed",
-    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json node_modules/",
+    "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json deno.lock node_modules/",
     "dev": "supabase start && supabase functions serve",
     "deploy": "supabase functions deploy",
     "start": "",
@@ -31,7 +31,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
     "dotenv-cli": "^7.2.1",
-    "esbuild": "^0.18.15",
+    "esbuild": "^0.18.16",
     "prisma": "^5.0.0",
     "tsx": "^3.12.7",
     "shared": "workspace:^",
