--- a/packages/api/deno.jsonc
+++ b/packages/api/deno.jsonc
@@ -1,5 +1,6 @@
 {
   "importMap": "./supabase/functions/import_map.json",
+  "lock": false,
   "tasks": {
     "cli": "deno repl -A --eval-file=./src/init.ts"
   }
