--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "generate": "pnpm run db:generate",
     "db:generate": "dotenv -e .env.local -- prisma generate",
+    "db:generate-proxy": "dotenv -e .env.local -- prisma generate --data-proxy",
     "db:push": "dotenv -e .env.local -- prisma db push --skip-generate",
     "db:seed": "dotenv -e .env.local -- prisma db seed",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json deno.lock node_modules/",
