added DATABASE_ON_EDGE env value.

--- a/packages/api/.env
+++ b/packages/api/.env
@@ -1,4 +1,5 @@
 # DATABASE
+DATABASE_ON_EDGE=0
 DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres"
 DATABASE_DIRECT_URL="postgresql://postgres:postgres@localhost:54322/postgres"
 
