generate now generates both edge and regular clients for supabase.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,8 +6,7 @@
   },
   "scripts": {
     "generate": "pnpm run db:generate",
-    "db:generate": "dotenv -e .env.local -- prisma generate",
-    "db:generate-proxy": "dotenv -e .env.local -- prisma generate --data-proxy",
+    "db:generate": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- prisma generate --data-proxy",
     "db:push": "dotenv -e .env.local -- prisma db push --skip-generate",
     "db:seed": "dotenv -e .env.local -- prisma db seed",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json deno.lock node_modules/",
@@ -30,9 +29,9 @@
     "@edge-runtime/vm": "^3.0.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.4",
+    "@types/node": "^20.4.5",
     "dotenv-cli": "^7.2.1",
-    "esbuild": "^0.18.16",
+    "esbuild": "^0.18.17",
     "prisma": "^5.0.0",
     "tsx": "^3.12.7",
     "shared": "workspace:^",
