--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "generate": "pnpm run db:generate",
-    "db:generate": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- prisma generate --data-proxy",
+    "db:generate": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- prisma generate",
     "db:push": "dotenv -e .env.local -- prisma db push --skip-generate",
     "db:seed": "dotenv -e .env.local -- prisma db seed",
     "cleanup": "rm -rf pnpm-lock.yaml yarn.lock package-lock.json deno.lock node_modules/",
@@ -16,7 +16,7 @@
     "typecheck": "tsc --noEmit",
     "format:write": "deno fmt",
     "format:check": "deno fmt --check",
-    "test:run": "deno test",
+    "test:run": "deno test --allow-all",
     "test": "deno test --watch"
   },
   "dependencies": {
