ci: disabled next.js edge runtime.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,6 @@ jobs:
 
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - run: flyctl deploy --remote-only
+      - run: flyctl deploy --remote-only --config ./ops/deployment/fly.toml .
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
