--- a/package.json
+++ b/package.json
@@ -42,7 +42,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "next": "^15.4.0-canary.10"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
+    "@happykit/flags": "^3.3.0",
     "@hookform/resolvers": "^5.0.1",
+    "@next/env": "^15.3.1",
+    "@radix-ui/react-accessible-icon": "^1.1.4",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -53,6 +60,7 @@
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-hover-card": "^1.1.11",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-menubar": "^1.1.12",
     "@radix-ui/react-navigation-menu": "^1.2.10",
@@ -66,32 +74,10 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toggle": "^1.1.6",
-    "@radix-ui/react-toggle-group": "^1.1.7",
-    "@radix-ui/react-tooltip": "^1.2.4",
-    "class-variance-authority": "^0.7.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.503.0",
-    "next": "^15.4.0-canary.10",
-    "next-themes": "^0.4.6",
-    "react-day-picker": "8.10.1",
-    "react-hook-form": "^7.56.1",
-    "react-resizable-panels": "^2.1.9",
-    "recharts": "^2.15.3",
-    "sonner": "^2.0.3",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^9.7.0",
-    "@happykit/flags": "^3.3.0",
-    "@next/env": "^15.3.1",
-    "@radix-ui/react-accessible-icon": "^1.1.4",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-toggle-group": "^1.1.7",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/themes": "^3.2.1",
     "@remark-embedder/core": "^3.0.3",
     "@remark-embedder/transformer-oembed": "^5.0.1",
@@ -99,21 +85,33 @@
     "@testing-library/react": "^16.3.0",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^22.15.2",
+    "@types/node": "^22.15.3",
     "@types/picomatch": "^4.0.0",
     "@types/react-dom": "^19.1.2",
     "@types/react": "^19.1.2",
     "adr-tool": "^0.3.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
+    "jose": "^6.0.10",
+    "lucide-react": "^0.503.0",
     "modern-normalize": "^3.0.1",
     "negotiator": "^1.0.0",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "picomatch": "^4.0.2",
     "postcss": "^8.5.3",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.1",
+    "react-resizable-panels": "^2.1.9",
     "react": "^19.1.0",
     "reading-time": "^1.5.0",
+    "recharts": "^2.15.3",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-code-titles": "^1.2.0",
@@ -121,9 +119,12 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.8",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.3"
   }
 }
