feat: stories page enhancements.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,6 +73,7 @@ repos:
             .git/COMMIT_EDITMSG|
             docs/.*|
             ops/docker/Dockerfile|
+            src/app/\[slug\]/stories/_components/.*|
             LICENSE|
             README.md|
             README.en.md
