--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "description": "açık yazılım ağı web sitesi",
+  "description": "aya web sitesi",
   "keywords": [
     "acik",
     "yazilim",
@@ -99,7 +99,6 @@
     "input-otp": "^1.4.2",
     "jose": "^6.0.10",
     "lucide-react": "^0.506.0",
-    "modern-normalize": "^3.0.1",
     "negotiator": "^1.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
