--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slider": "^1.3.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.13",
@@ -96,7 +96,6 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "flags": "4.0.1-ff75a409-20250506071241",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.507.0",
