--- a/package.json
+++ b/package.json
@@ -40,12 +40,17 @@
     "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
     "dev:legacy": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "biome lint --unsafe && deno lint",
+    "lint:fix": "biome lint --unsafe --write && deno lint --fix",
+    "format": "biome format && deno fmt --check",
+    "format:fix": "biome format --write && deno fmt"
   },
   "dependencies": {
     "next": "^15.4.0-canary.23"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.0.0-beta.2",
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
     "@next/env": "^15.3.1",
@@ -85,7 +90,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^22.15.11",
+    "@types/node": "^22.15.14",
     "@types/picomatch": "^4.0.0",
     "@types/react-dom": "^19.1.3",
     "@types/react": "^19.1.3",
