feat: stories from backend.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,7 +73,7 @@ repos:
             .git/COMMIT_EDITMSG|
             docs/.*|
             ops/docker/Dockerfile|
-            src/app/\[slug\]/stories/_components/.*|
+            src/app/\[slug\]/_components/.*|
             LICENSE|
             README.md|
             README.en.md
