refactor: final wording updates.

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_HOST=dev.acikyazilimagi.com
+NEXT_PUBLIC_HOST=aya.is
 NEXT_PUBLIC_BACKEND_URI=http://localhost:3000/contract/mocks
 SESSION_SECRET=
