--- a/ops/deployment/fly.toml
+++ b/ops/deployment/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "aya-website"
+app = "aya.is-webclient"
 
 [build]
 build-target = "runner"
