feat: backend integration.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_HOST=aya.is
-NEXT_PUBLIC_BACKEND_URI=http://localhost:3000/contract/mocks
+# NEXT_PUBLIC_BACKEND_URI=http://localhost:3000/contract/mocks
+NEXT_PUBLIC_BACKEND_URI=https://api.aya.is
 SESSION_SECRET=
