--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
     "dev:legacy": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
+    "build:turbo": "next build --turbopack",
     "start": "next start",
     "lint": "biome lint --unsafe && deno lint",
     "lint:fix": "biome lint --unsafe --write && deno lint --fix",
@@ -47,10 +48,10 @@
     "format:fix": "deno fmt"
   },
   "dependencies": {
-    "next": "^15.4.0-canary.28"
+    "next": "^15.4.0-canary.31"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.0-beta.2",
+    "@biomejs/biome": "^2.0.0-beta.3",
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
     "@next/env": "^15.3.2",
@@ -86,7 +87,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@remark-embedder/core": "^3.0.3",
     "@remark-embedder/transformer-oembed": "^5.0.1",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.6",
     "@testing-library/react": "^16.3.0",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "^0.6.3",
@@ -103,7 +104,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
-    "lucide-react": "^0.508.0",
+    "lucide-react": "^0.509.0",
     "negotiator": "^1.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
@@ -125,7 +126,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "vaul": "^1.1.2",
