style: minor linter warnings are fixed.

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,10 @@
       "next": "recommended"
     },
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "correctness": {
+        "noUnusedImports": "off"
+      }
     }
   },
   "javascript": {
