--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,8 +42,7 @@ repos:
           - ".github/typos.toml"
         exclude: |
           (?x)^(
-            docs/.*|
-            src/app/contract/mocks/data.json
+            docs/.*
           )$
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v4.0.0
