feat: filtering on elements page.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -75,6 +75,7 @@ repos:
             ops/docker/Dockerfile|
             src/messages/.*|
             src/app/\[slug\]/_components/.*|
+            src/app/elements/_components/.*|
             LICENSE|
             README.md|
             README.en.md
