feat: products page.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,6 +76,7 @@ repos:
             src/messages/.*|
             src/app/\[slug\]/_components/.*|
             src/app/elements/_components/.*|
+            src/app/products/_components/.*|
             LICENSE|
             README.md|
             README.en.md
